Clean up SslHandlerFactoryImpl a bit
Use an instanceof pattern and if/else chain instead of a checkArgument.
Also prefer Set.of().

Change-Id: I643fd75bd5191f1f9d9f434844d1b0e924433ad2
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>